# llvm-commutative-matcher

./: .gitignore  CMakeLists.txt  CommutativeMatcher.cpp  CommutativeMatcher.h  README.md
temp/: log1pmd.ll
temp/PROJ/: README.md  aasincos.cpp.ll  adams.cpp.ll  adjlon.cpp.ll  aea.cpp.ll  aeqd.cpp.ll  affine.cpp.ll  airocean.cpp.ll  airy.cpp.ll  aitoff.cpp.ll  area.cpp.ll  august.cpp.ll  axisswap.cpp.ll  bacon.cpp.ll  bertin1953.cpp.ll  bipc.cpp.ll  boggs.cpp.ll  bonne.cpp.ll  c_api.cpp.ll  calcofi.cpp.ll  cart.cpp.ll  cass.cpp.ll  cc.cpp.ll  ccon.cpp.ll  cct.cpp.ll  cea.cpp.ll  chamb.cpp.ll  col_urban.cpp.ll  collg.cpp.ll  comill.cpp.ll  common.cpp.ll  concatenatedoperation.cpp.ll  conversion.cpp.ll  coord_operation.cpp.ll  coordinates.cpp.ll  coordinatesystem.cpp.ll  crast.cpp.ll  create.cpp.ll  crs_to_crs.cpp.ll  cs2cs.cpp.ll  (+181 more)
temp/PROJ_after/: aasincos.cpp.ll  adams.cpp.ll  adjlon.cpp.ll  aea.cpp.ll  aeqd.cpp.ll  affine.cpp.ll  airocean.cpp.ll  airy.cpp.ll  aitoff.cpp.ll  area.cpp.ll  august.cpp.ll  axisswap.cpp.ll  bacon.cpp.ll  bertin1953.cpp.ll  bipc.cpp.ll  boggs.cpp.ll  bonne.cpp.ll  c_api.cpp.ll  calcofi.cpp.ll  cart.cpp.ll  cass.cpp.ll  cc.cpp.ll  ccon.cpp.ll  cct.cpp.ll  cea.cpp.ll  chamb.cpp.ll  col_urban.cpp.ll  collg.cpp.ll  comill.cpp.ll  common.cpp.ll  concatenatedoperation.cpp.ll  conversion.cpp.ll  coord_operation.cpp.ll  coordinates.cpp.ll  coordinatesystem.cpp.ll  crast.cpp.ll  create.cpp.ll  crs_to_crs.cpp.ll  cs2cs.cpp.ll  ctx.cpp.ll  (+180 more)
